fixed moon icon size on mobile

--- a/src/stylesheet/components/_icons.scss
+++ b/src/stylesheet/components/_icons.scss
@@ -29,7 +29,7 @@
 
     @include respond(sm) {
       width: 3rem;
-      height: 3.3rem;
+      height: 3.5rem;
     }
   }
 
